Added github Source Code inspection in each card

--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/App.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/App.xaml
@@ -10,7 +10,7 @@
                 <ResourceDictionary Source="Other/Themes/ProgressBar_style.xaml"/>
                 <ResourceDictionary Source="Other/Themes/Windows.Control.xaml"/>
                 <ResourceDictionary Source="Other/Themes/Telerik.windows.controls.RibbonView.xaml"/>
-                <!--<ResourceDictionary Source="Other/Themes/Telerik.Windows.Controls.Navigation.xaml"/>-->
+                <ResourceDictionary Source="Other/Themes/Telerik.Windows.Controls.Navigation.xaml"/>
                 <ResourceDictionary Source="Other/Themes/Telerik.Windows.Controls.Docking.xaml"/>
                 <ResourceDictionary Source="Other/Themes/Telerik.Windows.Controls.GridView.xaml"/>
                 <ResourceDictionary Source="Other/Themes/Telerik.Windows.Controls.Input.xaml"/>
