--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Other/Themes/System.Windows.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Other/Themes/System.Windows.xaml
@@ -437,7 +437,7 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style TargetType="Button" BasedOn="{StaticResource ButtonStyle}"/>
+    <!--<Style TargetType="Button" BasedOn="{StaticResource ButtonStyle}"/>-->
     <Style x:Key="CheckBoxStyle" TargetType="CheckBox">
         <Setter Property="Background" Value="{StaticResource MainBrush}"/>
         <Setter Property="BorderBrush" Value="{StaticResource BasicBrush}"/>
