Display both the native RadGridView and the one implemented via Kendo UI.

--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Broken/Broken.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Broken/Broken.xaml
@@ -11,6 +11,7 @@
             <local:RadSplitButton_Demo HorizontalAlignment="Center"/>
             <local:RadTabControl_Demo HorizontalAlignment="Center"/>
             <local:RadToggleSwitchButton_Demo HorizontalAlignment="Center"/>
+            <local:RadGridView_Demo HorizontalAlignment="Center"/>
         </local:MasonryPanelWithProgressiveLoading>
     </StackPanel>
 </UserControl>
