--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/App.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/App.xaml
@@ -12,7 +12,7 @@
                 <ResourceDictionary Source="Other/Themes/Telerik.windows.controls.RibbonView.xaml"/>
                 <ResourceDictionary Source="Other/Themes/Telerik.Windows.Controls.Navigation.xaml"/>
                 <ResourceDictionary Source="Other/Themes/Telerik.Windows.Controls.Docking.xaml"/>
-                <!--<ResourceDictionary Source="Other/Themes/Telerik.Windows.Controls.GridView.xaml"/>-->
+                <ResourceDictionary Source="Other/Themes/Telerik.Windows.Controls.GridView.xaml"/>
                 <ResourceDictionary Source="Other/Themes/Telerik.Windows.Controls.Input.xaml"/>
                 <!--<ResourceDictionary Source="/Themes/System.Windows.xaml"/>-->
             </ResourceDictionary.MergedDictionaries>
