--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/SupportedViaKendoUI/RadGridViewViaKendoUI/RadGridViewViaKendoUI_Demo.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/SupportedViaKendoUI/RadGridViewViaKendoUI/RadGridViewViaKendoUI_Demo.xaml
@@ -1,9 +1,9 @@
 ﻿<UserControl
-    x:Class="OpenSilver.Samples.TelerikUI.RadGridView_Demo"
+    x:Class="OpenSilver.Samples.TelerikUI.RadGridViewViaKendoUI_Demo"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:OpenSilver.Samples.TelerikUI"
-    xmlns:controls="using:Telerik.Windows.Controls">
+    xmlns:kendo="using:KendoUI.Windows.Controls">
 
     <ContentControl Style="{StaticResource Card_Style}" Height="500" Width="440">
         <Grid>
@@ -12,8 +12,8 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <ContentControl Content="RadGridView" Foreground="#FFD59851" Background="#FFBFA383" Style="{StaticResource HeaderControl_Style}"/>
-            <controls:RadGridView x:Name="RadGridView1" Grid.Row="1" Width="400" Height="400" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <ContentControl Content="RadGridView via KendoUI" Foreground="#FFD59851" Background="#FFBFA383" Style="{StaticResource HeaderControl_Style}"/>
+            <kendo:RadGridView x:Name="RadGridView1" Grid.Row="1" Width="400" Height="400" HorizontalAlignment="Center" VerticalAlignment="Center"/>
             <Button Grid.Row="2" Content="VIEW SOURCE..." Click="ButtonViewSource_Click" Background="#FF6F7DFF" Style="{StaticResource ButtonViewSource_Style}"/>
         </Grid>
     </ContentControl>
