Update OpenSilver NuGet package reference from version "1.0.0-alpha-006" to "1.0.0-alpha-008".

--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI.Browser/Pages/Index.razor
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI.Browser/Pages/Index.razor
@@ -8,5 +8,7 @@
         base.OnInitialized();
         JavaScriptExecutionHandler javaScriptExecutionHandler = (JavaScriptExecutionHandler)DotNetForHtml5.Core.INTERNAL_Simulator.JavaScriptExecutionHandler;
         javaScriptExecutionHandler.JSRuntime = JSRuntime;
+
+        Program.RunApplication();
     }
 }
