--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Broken/RadTabControl/RadTabControl_Demo.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Broken/RadTabControl/RadTabControl_Demo.xaml
@@ -2,7 +2,8 @@
     x:Class="OpenSilver.Samples.TelerikUI.RadTabControl_Demo"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:OpenSilver.Samples.TelerikUI">
+    xmlns:local="clr-namespace:OpenSilver.Samples.TelerikUI"
+    xmlns:tabControlWorkAround="clr-namespace:OpenSilver.Compatibility.TelerikUI;assembly=Telerik.Windows.Controls.Navigation">
 
     <ContentControl Style="{StaticResource Card_Style}" Height="210" Width="180">
         <Grid>
@@ -16,6 +17,14 @@
                 <!--<controls:RadTabControl>
                     <controls:RadTabItem Header="Tab 1"/>
                 </controls:RadTabControl>-->
+                <tabControlWorkAround:RadTabControl>
+                    <tabControlWorkAround:RadTabItem Header="Tab 1">
+                        <Border Background="Yellow" Width="20" Height="20"/>
+                    </tabControlWorkAround:RadTabItem>
+                    <tabControlWorkAround:RadTabItem Header="Tab 2">
+                        <Border Background="Red" Width="20" Height="20"/>
+                    </tabControlWorkAround:RadTabItem>
+                </tabControlWorkAround:RadTabControl>
             </StackPanel>
 
             <Button Grid.Row="2" Content="VIEW SOURCE..." Click="ButtonViewSource_Click" Background="#FF6F7DFF" Style="{StaticResource ButtonViewSource_Style}"/>
