Add FluidContentControl + update RadTransitionControl demo with a compatibility version.

--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Broken/Broken.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Broken/Broken.xaml
@@ -13,6 +13,7 @@
             <local:RadToggleSwitchButton_Demo HorizontalAlignment="Center"/>
             <local:RadGridView_Demo HorizontalAlignment="Center"/>
             <local:RadTileView_Demo HorizontalAlignment="Center"/>
+            <local:FluidContentControl_Demo HorizontalAlignment="Center"/>
         </local:MasonryPanelWithProgressiveLoading>
     </StackPanel>
 </UserControl>
