--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Broken/RadTileView/RadTileView_Demo.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Broken/RadTileView/RadTileView_Demo.xaml
@@ -26,7 +26,7 @@
                         <TextBlock Text="Item3 Content"/>
                     </compatibility:RadTileViewItem>
                 </compatibility:RadTileView>
-                <telerik:RadTileView Width="300" Height="350">
+                <telerik:RadTileView Width="300" Height="350" IsDockingEnabled="True" MaximizeMode="One" MinimizedItemsPosition="Right">
                     <telerik:RadTileViewItem Header="Item1">
                         <TextBlock Text="Item1 Content"/>
                     </telerik:RadTileViewItem>
