--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/InProgress/RadTransitionControl/RadTransitionControl_Demo.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/InProgress/RadTransitionControl/RadTransitionControl_Demo.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:OpenSilver.Samples.TelerikUI"
+    xmlns:compatibility="clr-namespace:OpenSilver.Compatibility.TelerikUI;assembly=Telerik.Windows.Controls"
     xmlns:controls="using:Telerik.Windows.Controls">
 
     <ContentControl Style="{StaticResource Card_Style}" Height="210" Width="180">
@@ -14,7 +15,10 @@
             </Grid.RowDefinitions>
             <ContentControl Content="Rad Transition control" Foreground="#FFFFA443" Background="#FFCB9E73" Style="{StaticResource HeaderControl_Style}"/>
             <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <controls:RadTransitionControl x:Name="radTransitionControl"/>
+                <compatibility:RadTransitionControl x:Name="radTransitionControl" Height="50">
+                    <controls:RadButton x:Name="MyRadButton" Content="Click me" Width="70" Background="#FF6F7DFF" Padding="4" FontSize="16"  />
+                </compatibility:RadTransitionControl>
+                <Button Content="Remove button from the RadTransitionControl" Click="Button_Click"/>
             </StackPanel>
 
             <Button Grid.Row="2" Content="VIEW SOURCE..." Click="ButtonViewSource_Click" Background="#FF6F7DFF" Style="{StaticResource ButtonViewSource_Style}"/>
