Remove some implicit styles so the Controls use Default styles instead.

--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Other/Themes/Telerik.Windows.Controls.Input.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Other/Themes/Telerik.Windows.Controls.Input.xaml
@@ -2380,8 +2380,8 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style TargetType="telerikInput:RadComboBoxItem" BasedOn="{StaticResource RadComboBoxItemStyle}"/>
-    <Style TargetType="telerikInput:RadComboBox" BasedOn="{StaticResource RadComboBoxStyle}"/>
+    <!--<Style TargetType="telerikInput:RadComboBoxItem" BasedOn="{StaticResource RadComboBoxItemStyle}"/>
+    <Style TargetType="telerikInput:RadComboBox" BasedOn="{StaticResource RadComboBoxStyle}"/>-->
     <ControlTemplate x:Key="IncreaseRepeatButtonControlTemplate" TargetType="RepeatButton">
         <Grid>
             <VisualStateManager.VisualStateGroups>
