--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Other/Themes/ProgressBar_style.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Other/Themes/ProgressBar_style.xaml
@@ -309,5 +309,5 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style TargetType="controls:RadProgressBar" BasedOn="{StaticResource RadProgressBarStyle}"/>
+    <!--<Style TargetType="controls:RadProgressBar" BasedOn="{StaticResource RadProgressBarStyle}"/>-->
 </ResourceDictionary>
