--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI.Browser/Pages/Index.razor
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI.Browser/Pages/Index.razor
@@ -1,13 +1,13 @@
 ﻿@page "/"
-@using DotNetForHtml5;
+@using OpenSilver.Samples.TelerikUI.Browser.Interop;
 @inject IJSRuntime JSRuntime;
 
 @code{
     protected override void OnInitialized()
     {
         base.OnInitialized();
-        JavaScriptExecutionHandler javaScriptExecutionHandler = (JavaScriptExecutionHandler)DotNetForHtml5.Core.INTERNAL_Simulator.JavaScriptExecutionHandler;
-        javaScriptExecutionHandler.JSRuntime = JSRuntime;
+
+        Cshtml5Initializer.Initialize(new UnmarshalledJavaScriptExecutionHandler(JSRuntime));
 
         Program.RunApplication();
     }
